# downf411

./: .env.example  .gitignore  CLAUDE.md  prd.json  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_screening_pipeline.py
app/: container.py  main.py  scheduler.py
app/api/v1/: deps.py  pages.py  partials.py  router.py  stream.py
app/config/: __init__.py  settings.py  ticker_thesis.py
app/db/: models.py  session.py
app/domain/alerts/: service.py
app/domain/game/: engine.py  risk_engine.py
app/domain/game/rules/: borrow_fee.py  dividend.py  kelly.py  liquidation.py  margin.py  pdt.py  squeeze.py
app/domain/market/: finnhub_adapter.py  provider.py  schemas.py
app/domain/prediction/: briefing.py  technicals.py  tracker.py
app/domain/prediction/engines/: base.py  claude_engine.py  ensemble.py  quant_engine.py
app/schemas/: api.py  signal.py
app/services/: market_hours.py
app/services/scan/: daily_scan.py  intraday_refresh.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  briefing.html  dashboard.html  history.html  profile.html  signal.html  trade.html
prompts/: briefing_system.txt  ensemble_system.txt  signal_system.txt
scripts/: run_scan.py  run_screen.py  seed_demo.py  seed_watchlist.py
tests/: conftest.py  test_engine.py  test_market_hours.py  test_risk_engine.py  test_rules.py  test_scheduler.py  test_technicals.py
tests/fixtures/: malformed_signal.json  valid_signal.json  wrong_schema_version.json
