[project]
name = "short-game"
version = "1.2.0"
description = "AI-powered paper trading simulator focused on short selling"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "apscheduler>=3.10.0",
    "finnhub-python>=2.4.0",
    "jinja2>=3.1.0",
    "anthropic>=0.42.0",
    "exchange-calendars>=4.5.0",
    "httpx>=0.28.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
